--- a/src/pages/particulaStyles/tecnologias.css
+++ b/src/pages/particulaStyles/tecnologias.css
@@ -1,15 +1,3 @@
-.tecnoContainer{
-    width: 180px;
-    height: 112px;
-}
-
-.cont-img{
-    width: 180px;
-    height: 112px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-}
 
 .show-text{
     opacity: 0;
@@ -17,4 +5,84 @@
 
 .show-text:hover{
     opacity: 1;
+}
+
+.child .dad:hover{
+    opacity: 0.6;
+    animation: opacar 0.8s ease;
+}
+ 
+
+.dad:hover .child{
+    opacity: 0.6;
+    animation: opacar 0.8s ease;
+}
+.dad:hover .child:hover{
+    opacity: 1;
+    animation: aclarar 0.8s ease;
+}
+
+
+
+@keyframes opacar {
+    from {opacity: 1;}
+    to {opacity: 0.6;}
+}
+
+@keyframes aclarar {
+    from {opacity: 0.6;}
+    to {opacity: 1;}
+}
+
+.tecnoContainer{
+    width: 200px;
+    height: 120px;
+}
+.cont-img{
+    width: 200px;
+    height: 120px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+@media (max-width: 1200px) {
+    .tecnoContainer{
+        width: 170px;
+        height: 102px;
+    }
+    .cont-img{
+        width: 170px;
+        height: 102px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+    }
+}
+
+@media (max-width: 960px) {
+    .tecnoContainer{
+        width: 150px;
+        height: 90px;
+    }
+    .cont-img{
+        width: 150px;
+        height: 90px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+    }
+}
+
+@media (max-width: 720px) {
+    .tecnoContainer{
+        width: 130px;
+        height: 78px;
+    }
+    .cont-img{
+        width: 130px;
+        height: 78px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+    }
 }
