--- a/src/styles/animations.css
+++ b/src/styles/animations.css
@@ -61,3 +61,96 @@
     }
 }
 
+.aparecer{
+    animation: aparecer 1s ease-in;
+    opacity: 1;
+    height: 100%;
+}
+@keyframes aparecer {
+    from {
+        opacity: 0;
+        height: 25%;
+    }
+
+    to {
+        opacity: 1;
+        height: 100%;
+    }
+}
+
+.desaparecer{
+    animation: desaparecer 1s ease-in;
+    opacity: 0;
+    height: 25%;
+}
+@keyframes desaparecer {
+    from {
+        opacity: 1;
+        height: 100%;
+    }
+
+    to {
+        opacity: 0;
+        height: 25%;
+    }
+}
+
+.entrar-desde-izquierda{
+    animation: entrar-desde-izquierda 2s ease;
+    opacity: 1;
+}
+@keyframes entrar-desde-izquierda {
+    0% {
+        transform: translateX(-40%);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+.salir-desde-izquierda{
+    animation: salir-desde-izquierda 2s ease;
+    opacity: 0;
+}
+@keyframes salir-desde-izquierda {
+    0% {
+        transform: translateX(0);
+        opacity: 1;
+      }
+      100% {
+        transform: translateX(-40%);
+        opacity: 0;
+      }
+}
+
+.entrar-desde-derecha{
+    animation: entrar-desde-derecha 2s ease;
+    opacity: 1;
+}
+@keyframes entrar-desde-derecha {
+    0% {
+        transform: translateX(40%);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+.salir-desde-derecha{
+    animation: salir-desde-derecha 2s ease;
+    opacity: 0;
+}
+@keyframes salir-desde-derecha {
+    0% {
+        transform: translateX(0);
+        opacity: 1;
+      }
+      100% {
+        transform: translateX(40%);
+        opacity: 0;
+      }
+}
