--- a/src/styles/images.css
+++ b/src/styles/images.css
@@ -1,5 +1,5 @@
 .main-image1{
-    width: 100vw;
+    width: 100%;
     height: 400px;
     background-repeat: no-repeat;
     background-size: cover;
@@ -7,14 +7,14 @@
 }
 
 .main-image-container{
-    width: 100vw;
+    width: 100%;
     height: 400px;
 }
 
 
 @media (max-width: 1200px) {
     .main-image1{
-        width: 100vw;
+        width: 100%;
         height: 350px;
         background-repeat: no-repeat;
         background-size: cover;
@@ -22,14 +22,14 @@
     }
 
     .main-image-container{
-        width: 100vw;
+        width: 100%;
         height: 350px;
     }
 }
 
 @media (max-width: 960px) {
     .main-image1{
-        width: 100vw;
+        width: 100%;
         height: 300px;
         background-repeat: no-repeat;
         background-size: cover;
@@ -37,14 +37,14 @@
     }
 
     .main-image-container{
-        width: 100vw;
+        width: 100%;
         height: 300px;
     }
 }
 
 @media (max-width: 720px) {
     .main-image1{
-        width: 100vw;
+        width: 100%;
         height: 250px;
         background-repeat: no-repeat;
         background-size: cover;
@@ -52,7 +52,7 @@
     }
 
     .main-image-container{
-        width: 100vw;
+        width: 100%;
         height: 250px;
     }
 }
